--- a/app/components/Timer.css
+++ b/app/components/Timer.css
@@ -1,37 +1,22 @@
-.backButton {
-  position: absolute;
+.container {
+  padding: 0 2vw;
+}
+
+.paper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 2vw;
 }
 
 .counter {
-  position: absolute;
-  top: 30%;
-  left: 45%;
-  font-size: 10rem;
+  text-align: center;
+  font-size: 10vw;
   font-weight: bold;
-  letter-spacing: -0.025em;
+  padding: 1rem 0;
 }
 
 .btnGroup {
-  position: relative;
-  top: 500px;
-  width: 480px;
-  margin: 0 auto;
-}
-
-.btn {
-  font-size: 1.6rem;
-  font-weight: bold;
-  background-color: #fff;
-  border-radius: 50%;
-  margin: 10px;
-  width: 100px;
-  height: 100px;
-  opacity: 0.7;
-  cursor: pointer;
-  font-family: Arial, Helvetica, Helvetica Neue;
-}
-
-.btn:hover {
-  color: white;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
 }
